<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_sign_up_here">Not registered? Sign Up here</string>

    <string name="enter_the_email_to_reset_password">Enter the email to reset password</string>

    <string name="submit">submit</string>
    <string name="logout">logout</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Covid -19 Tracker</string>
    <string name="nav_header_subtitle">Covid-Updates</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <string name="menu_home">Home</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_world_data">Global Covid-19 Updates</string>
    <string name="menu_coutnry_data">Country Covid-19 Updates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>