<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/country"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_world_data"
            android:icon="@drawable/world"
            android:title="@string/menu_world_data" />
        <item
            android:id="@+id/nav_country_data"
            android:icon="@drawable/home"
            android:title="@string/menu_coutnry_data" />
    </group>
    <group>
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_about_us" />
    </group>
</menu>